test/corpus/problog.txt
==================
Clause 1
==================

0.2::test_predicate.

---

(source_file
  (clause_term
    (probability_label
      (number))
    (atom)
    (end)))

==================
Clause 2
==================

1::test_predicate:-
  true.

---

(source_file
  (clause_term
    (probability_label
      (number))
    (operation_1200xfx
      (atom)
      (operator_1200xfx)
      (atom))
    (end)))

====================
DCG
====================

0.8::test_dcg-->
  true.

---

(source_file
  (clause_term
    (probability_label
      (number))
    (operation_1200xfx
      (atom)
      (operator_1200xfx)
      (atom))
    (end)))
